--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -112,14 +112,14 @@ width: 100%;
 }
 
 .homepage-text {
-  animation: fade-in .5s linear;
+  animation: fade-in 1s linear;
   opacity: 1;
   display: inline;
   font-size: 50px;
 }
 
 .page-transition {
-  animation: fade-in .5s linear;
+  animation: fade-in 1s linear;
   opacity: 1;
 }
 .new-user-container {
@@ -241,4 +241,55 @@ input, label {
 }
 .container .info span .fa {
   color: #EF3B3A;
+}
+caption {
+  display: table-caption;
+  text-align: left;
+}
+
+.dashboard {
+  width: 100%;
+  height: 100%;
+}
+
+.welcome {
+  font-family: "Roboto", sans-serif;
+  font-size: 32px;
+}
+
+.dashboard button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  /* background: #4CAF50; */
+  background: #40E0D0;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.dashboard button:hover,.form button:active,.form button:focus {
+  /* background: #43A047; */
+  background: #3bcebf;
+}
+
+.nav {
+  background: #40E0D0;
+  position: relative;
+  display: flex;
+}
+
+.nav-left {
+  align-self: left;
+}
+.nav-right {
+align-self: right ;
+}
+
+.headers {
+  color: #FFFFFF;
 }
