--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -373,3 +373,69 @@ table{
         background-color: #3bcebf;
         border-color: #40E0D0;
       }
+
+      .captcha-check {
+        box-sizing: content-box;
+        width: 270px;
+        height: 50px;
+        padding: 0px;
+        margin-bottom: 15px;
+        border-width: 1px;
+        border-style: solid;
+        border-radius: 4px;
+        border-color: rgb(224, 224, 224);
+        background-color: rgb(250, 250, 250);
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+      }
+
+      .checkbox-container {
+        width: 50px;
+        height: 50px;
+        position: relative;
+        cursor: default;
+      }
+
+      .checkbox {
+        height: 30px;
+        width: 30px;
+
+      }
+      .checkbox-text {
+        color: rgb(85, 85, 85);
+        font-size: 14px;
+        margin-left: 15px;
+        margin-bottom: 0;
+      }
+
+      .captcha-icon {
+        margin-left: 45px;
+        width: 80px;
+        cursor: default;
+      }
+
+      .try-again {
+        color: red;
+        font-size: 14px;
+        margin-right: 20px;
+        margin-top: auto;
+        margin-bottom: auto;
+      }
+
+      .checkmark {
+        width: 30px;
+        height: 30px;
+      }
+
+      .captcha-modal {
+        cursor: default;
+      }
+
+      #check-box {
+        cursor: pointer;
+      }
+
+      #sidebarMenu {
+        height: 100vh;
+      }
